<resources>
    <string name="app_name">HelenKeller</string>
    <string name="action_settings">Settings</string>
    <string name="add_tags_deck">Add Tags Deck</string>
    <string name="enter_deck_name">Enter Deck Name</string>
    <string name="deck_name">Deck Name</string>
    <string name="_29_tags">29 Tags</string>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="deckname">DeckName</string>
    <string name="no_tags_added">No Tags Added</string>
    <string name="nfc_is_not_enabled">NFC is not enabled</string>
    <string name="enter_text">Enter Text</string>
    <string name="write">Write</string>
    <string name="tap_a_tag">Tap a tag</string>
    <string name="can_i_have_some_coffee">Can I have Some Coffee.</string>
    <string name="h">Hello</string>
</resources>
