<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/enableNFC"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nfc_is_not_enabled"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/hideLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/enter_text"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputToWrite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            />
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="Select Background Color"
            android:textSize="20sp" />
        <Button android:layout_margin="15dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/backgroundColor"
            android:background="#FAB"
            ></Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="Select Text Color"
            android:textSize="20sp" />

            <Button
                android:id="@+id/text_color"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="15dp"
                android:background="@color/design_default_color_primary"></Button>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/tapTagLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone"
        android:weightSum="10">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:src="@drawable/nfc_1326_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tap_a_tag"
            android:textAlignment="center" />
    </LinearLayout>
    <GridLayout
        android:id="@+id/hideGrid"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:columnCount="2"
        android:visibility="gone">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:text="@string/cancel"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"/>
        <Button
            android:id="@+id/okBtn"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:text="@string/write"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"/>

    </GridLayout>

</android.support.design.widget.CoordinatorLayout>